ghost/admin/app/styles/layouts/settings.css
/* ... */
.gh-stripe-guide-image img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    position: absolute;
    top: 0;
    left: 0;
    border-radius: 0 2px 2px 0;
}

@media (max-width: 1080px) {
    .gh-settings-members-pricetrialcont {
        display: grid;
        grid-template-columns: none;
        grid-gap: 0px;
        margin-bottom: 24px;
    }
}

@media (max-width: 500px) {
    .gh-members-stripe-info-header {
        flex-direction: column;
        align-items: stretch;
    }

    .gh-members-stripe-info-header h4 {
        order: 2;
        margin-top: 10px;
        padding-top: 10px;
        border-top: 1px solid var(--whitegrey);
    }

    .gh-members-stripe-badge {
        order: 1;
        /* margin: -10px 0 0 -10px; */
    }

    .gh-members-stripe-info {
        width: 100%;
    }

    .gh-stripe-connected-container {
        margin-top: 7rem;
    }

    .gh-stripe-connected-container h1 {
        font-size: 2.4rem;
    }

    .gh-stripe-connected-info p {
        font-size: 1.4rem;
    }

    .gh-stripe-guide-image {
        display: none;
    }

    .gh-stripe-guide-content {
        border-radius: 2px;
        border: 1px solid var(--lightgrey-l2);
    }
}

@media (max-width: 430px) {
    .gh-stripe-site-title {
        flex-direction: column;
    }
    .gh-members-connect-testmodelabel {
        margin-top: 15px;
    }
    .gh-logo-squircle {
        flex-basis: 40px;
        width: 40px;
        height: 40px;
    }
}

.gh-setting-nossl {
    border-top: 1px solid var(--whitegrey-d1);
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 16px -24px -12px;
}

.gh-setting-nossl-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 32px;
    text-align: center;
    max-width: 520px;
}

.gh-setting-nossl-container svg {
    width: 44px;
    height: 44px;
    margin-bottom: 12px;
}

.gh-setting-nossl-container svg path,
.gh-setting-nossl-container svg rect,
.gh-setting-nossl-container svg circle {
    stroke-width: 1px;
}

.gh-setting-nossl-container h4 {
    font-size: 1.5rem;
    letter-spacing: 0;
    font-weight: 600;
}

.gh-setting-nossl-container p {
    margin: 8px 0 0;
    color: var(--midgrey);
}

/* Signup form modal */
.gh-signup-form-embed {
    margin: 6vw 0;
}

.fullwidth-modal {
    max-width: 100%;
}

.epm-modal .modal-signup-form-embed {
    display: grid;
    grid-template-columns: 5fr 3fr;
    max-width: 1120px;
    max-height: 520px;
    margin: 32px;
    padding: 0;
}

@media (max-width: 960px) {
    .epm-modal .modal-signup-form-embed {
        grid-template-columns: 1fr;
    }
}

.modal-signup-form-embed-preview {
    position: relative;
    margin: 1.6rem;
    margin-right: 0;
    overflow: hidden;
    border: 1px solid var(--whitegrey);
}

@media (max-width: 960px) {
    .modal-signup-form-embed-preview {
        display: none;
    }
}

.gh-signup-form-iframe {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    border: 0;
    opacity: 1;
    z-index: 0;
    transition: none;
}

.gh-signup-form-iframe.gh-iframe-hidden {
    opacity: 0;
    z-index: 1;
    transition: 0.3s opacity;
    pointer-events: none;
}

.modal-signup-form-embed-main {
    padding: 32px;
    height: 100%;
}

.modal-signup-form-embed-main .modal-body {
    height: 320px;
    margin: -4px;
    padding: 4px;
    overflow-y: auto;
}

.modal-signup-form-embed-main .form-group {
    margin-bottom: 0;
}

.gh-signup-form-container .gh-stack-item {
    margin-bottom: 1.6rem;
}

.gh-signup-form-container .gh-stack-item:last-child {
    margin-bottom: 0;
}

.gh-signup-form-embed-code-input {
    min-height: 72px;
    background: var(--whitegrey-l2);
    font-family: var(--font-family-mono);
    font-size: 1.35rem;
}

.gh-signup-form-embed-code-input:focus {
    background: var(--whitegrey-l2);
    border-color: var(--lightgrey-l1) !important;
    box-shadow: none;
}

/* History log
/* ---------------------------------------------------------- */
.gh-history-filter-li {
    height: 32px;
}

.gh-history-filter-li svg {
    margin-right: 6px;
}

.gh-activity-log-actions {
    padding-top: 12px;
    padding-bottom: 12px;
}

.gh-activity-log-actions ul {
    width: 240px;
}

.gh-activity-log-actions hr {
    margin: 12px -20px;
}

.gh-activity-log-action-switch.for-switch.small label {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: unset !important;
    height: unset !important;
}

.gh-activity-log-action-switch.for-switch.small .input-toggle-component {
    position: relative;
    width: 30px!important;
    height: 18px!important;
}

.gh-activity-log-action-switch.for-switch.small .input-toggle-component:before {
    width: 14px !important;
    height: 14px !important;
}

.gh-activity-log-action-switch.for-switch.small input:checked+.input-toggle-component:before {
    transform: translateX(12px);
}

.gh-history-container {
    display: flex;
    align-items: center;
}

.gh-history-container strong {
    font-weight: 600;
}

.gh-history-action {
    padding-right: 6px;
}

.gh-history-object {
    padding-left: 6px;
}

.gh-history-object code {
    background: none;
    border: none;
    color: var(--midgrey);
}

.gh-history-dash {
    padding-left: 0;
    padding-right: 0;
    color: var(--lightgrey);
}

.gh-history-description {
    font-size: 1.4rem;
    color: var(--darkgrey);
    white-space: nowrap;
    margin-top: 2px;
    font-weight: 500;
}

.gh-history-description a {
    font-weight: 700;
}

.gh-history-name {
    font-size: 1.35rem;
    font-weight: 400;
    margin-bottom: 0 !important;
    color: var(--midgrey);
}

.gh-history-name a {
    color: var(--midgrey) !important;
    font-weight: 400;
}

.gh-history-name a:hover {
    color: var(--darkgrey) !important;
}

.gh-history-datetime {
    font-size: 1.2rem;
    color: var(--midlightgrey);
}
/* ... */

