Fixed scrollbar position in signup form modal
Refs https://www.notion.so/ghost/Embed-testing-0193905e46d449b5ad865f7364176814?pvs=4#325a9bc8979a4be9bf436c3f619d8e53

--- a/ghost/admin/app/styles/layouts/settings.css
+++ b/ghost/admin/app/styles/layouts/settings.css
@@ -3137,8 +3137,8 @@ p.theme-validation-details {
 
 .modal-signup-form-embed-main .modal-body {
     height: 320px;
-    margin: -4px;
-    padding: 4px;
+    margin: -32px;
+    padding: 32px;
     overflow-y: auto;
 }
 
